fixing white space

--- a/ui/components/Search/Search.module.css
+++ b/ui/components/Search/Search.module.css
@@ -7,6 +7,7 @@
     padding: 8px;
     transition: box-shadow 0.3s;
     max-width: 400px;
+    margin-left: 5em;
 }
 
 .search_container:hover {
